# gcp-mcp

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  smithery.yaml
src/gcp-mcp-server/: __init__.py  main.py
src/gcp-mcp-server/core/: __init__.py  auth.py  context.py  logging_handler.py  security.py  server.py
src/gcp-mcp-server/prompts/: __init__.py
src/gcp-mcp-server/services/: README.md  __init__.py  artifact_registry.py  client_instances.py  cloud_audit_logs.py  cloud_bigquery.py  cloud_build.py  cloud_compute_engine.py  cloud_monitoring.py  cloud_run.py  cloud_storage.py
utils/: __init__.py  helpers.py
