[project]
name = "gcp-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server that provides access to Google Cloud Platform services, enabling LLMs to manage and interact with GCP resources."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "mcp[cli]>=1.0.0",
    "google-cloud-bigquery",
    "google-cloud-storage",
    "google-cloud-run",
    "google-cloud-artifact-registry",
    "google-cloud-logging",
    "python-dotenv",
    "google-cloud-monitoring",
    "google-cloud-compute",
    "google-cloud-build",
]
[[project.authors]]
name = "Enes Bol"
email = "enes2277@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gcp_mcp"]

[project.scripts]
gcp-mcp-server = "gcp_mcp.main:main"
